# reto-xmas-2025-goland-ia-backend

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.pgvector  DocsManager.postman_collection.json  RAGManager.postman_collection.json  README.md  compose.yml  docker-compose.yml  init.sql  manage.sh  pyproject.toml
.github/workflows/: deploy.yml  pr-validation.yml  regression-pipeline.yml
DocsManager/: .env.example  Dockerfile  Dockerfile.pgvector  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
DocsManager/app/: db_connection.py
DocsManager/app/api/routes/: admin.py  base.py  chatMessage.py  files.py
DocsManager/app/core/: config.py  database_connection.py  db_connection.py  minio_client.py  rabbitmq.py
DocsManager/app/models/: __init__.py  chat_message  chat_message.py  chat_session.py  document.py  document_chunks  document_chunks.py
DocsManager/app/schemas/: __init__.py  chatMessage.py  document.py
DocsManager/app/schemas/enums/: sender_type.py
DocsManager/app/services/: chatMessage.py  minio_service.py
DocsManager/db/: init.sql
DocsManager/scripts/: README.md  manage_minio_events.sh  setup_minio_events.sh
RAGManager/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  init.sql  main.py  pyproject.toml  test_agent.py  test_pipeline.py  worker.py
RAGManager/RAG Manager API/: Get Chat History.bru  bruno.json
RAGManager/RAG Manager API/environments/: Local Development.bru
RAGManager/app/: __init__.py
RAGManager/app/agents/: __init__.py  graph.py  routing.py  state.py
RAGManager/app/agents/nodes/: __init__.py  agent_host.py  context_builder.py  fallback.py  fallback_final.py  fallback_inicial.py  generator.py  guard.py  guard_final.py  guard_inicial.py  parafraseo.py  retriever.py
RAGManager/app/api/routes/: __init__.py  admin.py  base.py  chat.py  chatMessage.py  documents.py
RAGManager/app/core/: config.py  database_connection.py  rabbitmq.py
RAGManager/app/models/: chat.py  chat_message.py  chat_session.py  document.py
RAGManager/app/repositories/: __init__.py  chat_repository.py
RAGManager/app/schemas/: __init__.py  chat.py  document.py
RAGManager/app/services/: chat.py  chatMessage.py  chunking_service.py  embedding_service.py  minio_client.py  minio_service.py  pdf_processor.py  pipeline.py  vector_store.py
RAGManager/app/workers/: __init__.py  document_worker.py  pdf_processor_consumer.py
app/api/routes/: admin.py
app/models/: document.py
app/schemas/: document.py
app/services/: admin.py  splitter.py
db-init/: 01-initial-setup.sql
