[project]
name = "goland-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"

dependencies = [
    "fastapi>=0.124.2",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.38.0",
    "pydantic-settings>=2.0.0",
    "pika>=1.3.0",
    "minio>=7.2.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
# Enable pyproject.toml support
target-version = "py313"
line-length = 120

# Enable auto-fix
fix = true

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable a comprehensive set of rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings (like Black)
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect line ending
line-ending = "auto"
