[project]
name = "rag-manager"
version = "0.1.0"
description = "RAG Manager for document processing"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
   "fastapi>=0.124.2",
    "ipython>=9.8.0",
    "langgraph>=1.0.4",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "pydantic-settings>=2.0.0",
    "guardrails-ai>=0.5.10",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"